# heh-college

./: README.md  file.json  file.pkl  file.txt  random_data.csv  syllabus.txt
Projects/markdown2pdf/: main.py  pyproject.toml
Projects/markdown2pdf/src/: index.py
concepts/: Question_Bank_Python.ipynb
concepts/OOPS/: README.md  abstraction.py  encapsulation.py  inheritance.py  polymorphism.py
concepts/comprehensions/: README.md  dictionaory-comprehension.py  list-comprehension.py
concepts/data structures/: README.md  data-struc.py
concepts/file-handling/: README.md  file.py
concepts/maptlotlib-module/: README.md  main.py
concepts/numpy-module/: README.md  main.py
concepts/os-module/: README.md  main.py
concepts/pandas-module/: README.md  main.py
concepts/regex/: README.md  regex.py
concepts/serialization-deserialization/: README.md  main.py  using-json.py
concepts/sets/: main.py
programs/: age-classifier.py  args-and-kwargs.py  armstrong-number-in-range.py  armstrong-number.py  assign-grades.py  calculator-gui.py  character-count.py  email-valdiator.py  errors.py  factorial-normal.py  factorial-recursive.py  fibanocci.py  gui-2.py  nth-fibanocci.py  palindrome.py  prime-number.py  python-triplets.py  question_bank_python.py  regex-questions.py  sort-even-odd.py  string-reversal.py  temp.py
temp/: main.py
